[metadata]
name = ship

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
setup_requires =
  setuptools >= 44.1
  pip >= 20
install_requires =
  arcade
  pymunk

tests =
  pytest
  pytest-cov
  black
  flake8
  mypy
  isort

build =
  pep517

[coverage:run]
branch = True

[coverage:report]
show_missing = True

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

# Global options:
[mypy]
python_version = 3.9
warn_unused_configs = True
warn_redundant_casts = True

# Per-module options:
[mypy-ship.*]
disallow_any_unimported = True
disallow_any_decorated = True
disallow_any_generics = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
warn_return_any = True
warn_unused_ignores = True
no_implicit_optional = True
strict_optional = True

[mypy-tests.*]
ignore_errors = True

[flake8]
max-line-length = 88
exclude = .git,__pycache__,__init__.py,.mypy_cache,.pytest_cache
